try fixing scroll issues on ios

--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -13,6 +13,7 @@
 	left: 0;
 	z-index: -1;
 	width: 1500px;
+	pointer-events: none;
 	@include media-md {
 		width: 106%;
 		height: auto;
